--- a/source/layouts/_meta.slim
+++ b/source/layouts/_meta.slim
@@ -4,11 +4,11 @@ meta content="ie=edge" http-equiv="x-ua-compatible"
 meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport"
 
 // Set dynamic and default meta
-- title = current_page.data.title || "Kaldi - Middleman + Netlify CMS Example"
-- description = current_page.data.description || "A simple example to get started with Middleman and Netlify CMS"
+- title = current_page.data.title || "Journey Financial"
+- description = current_page.data.description || "Ottawa Financial Advice"
 //Change this to your domain
-- url = "https://brave-hypatia-0b12fd.netlify.com"
-- image = current_page.data.image || "/images/uploads/homepage-hero.jpg"
+- url = "https://sharp-mirzakhani-e216ad.netlify.com/"
+- image = current_page.data.image || "/images/uploads/journeyfinancial_road-1.jpg"
 
 title =title
 
