--- a/source/news.html.slim
+++ b/source/news.html.slim
@@ -1,7 +1,7 @@
 section.homepage-news.news
   .container
     h2
-      | News
+      | The Journey Blog
     .news-items
       //get the first two most recent posts
       - blog.articles.each do | article |
