--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -1,5 +1,5 @@
 ---
-title: Kaldi - Middleman + Netlify CMS Example
+title: Journey Financial
 ---
 
 section.hero style=background_image(image_path(data.pages.home.hero.image))
@@ -28,7 +28,7 @@ section.homepage-products.products
 section.homepage-news.news
   .container
     h2
-      | News
+      | The Journey Blog
     .news-items
       //get the first two most recent posts
       - blog.articles.first(2).each do | article |
