--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -12,6 +12,12 @@ section.homepage-story
     .row
       .story-content
         = markdown data.pages.home.story
+        
+section.homepage-test
+  .container
+    .row
+      .test-content
+        = markdown data.pages.home.test
 
 section.homepage-products.products
   .container
