--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -13,6 +13,11 @@ section.homepage-story
       .story-content
         = markdown data.pages.home.story
 
+section.test
+  .container
+    .row
+      p = markdown data.pages.home.test
+
 section.homepage-products.products
   .container
     h2
