Update and rename test.scss to _test.scss

--- a/source/stylesheets/demo/homepage/_test.scss
+++ b/source/stylesheets/demo/homepage/_test.scss
@@ -1,7 +1,7 @@
-.homepage-story {
+.homepage-test {
   background: $secondary-color;
 
-  .story-content {
+  .test-content {
     @extend %column;
     @extend %col-sm-8;
     padding-top: 60px;
