--- a/source/stylesheets/demo/homepage/_test.scss
+++ b/source/stylesheets/demo/homepage/_test.scss
@@ -1,12 +1,12 @@
 .homepage-test {
-  background: $secondary-color;
+  background: $background-primary-color;
 
   .test-content {
     @extend %column;
     @extend %col-sm-8;
     padding-top: 60px;
     padding-bottom: 60px;
-    color: rgba(255, 255, 255, 1);
+    color: $text-color;
 
     h2 {
       margin: 0 0 15px;
