--- a/source/stylesheets/demo/homepage/_hero.scss
+++ b/source/stylesheets/demo/homepage/_hero.scss
@@ -13,6 +13,7 @@
   h1 {
     @extend %column;
     @extend %col-xs-8;
+    color: $background-primary-color!;
     margin: 0;
     padding-top: 20%;
 
