--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -6,6 +6,7 @@ section.hero style=background_image(image_path(data.pages.home.hero.image))
   .caption
     .row
       h1 = data.pages.home.hero.title
+      h4 = data.pages.home.hero.subheader
 
 section.homepage-story
   .container
