--- a/source/stylesheets/demo/homepage/_hero.scss
+++ b/source/stylesheets/demo/homepage/_hero.scss
@@ -24,6 +24,20 @@
       padding-top: 10%;
     }
   }
+  h4 {
+    @extend %column;
+    @extend %col-xs-8;
+    margin: 0;
+    padding-top: 1%;
+
+    @media screen and (max-width: $screen-md-max){
+      padding-top: 1%;
+    }
+    @media screen and (max-width: $screen-xs-max){
+      padding-top: 1%;
+    }
+  }
+
   @media screen and (max-width: 400px){
     padding-bottom: 50%;
   }
