--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -14,10 +14,17 @@ section.homepage-story
       .story-content
         = markdown data.pages.home.story
 
-section.test
+section.homepage-test
   .container
     .row
-      p = markdown data.pages.home.test
+      .test-content
+       = markdown data.pages.home.test
+
+section.homepage-services
+  .container
+    .row
+      .services-content
+       = markdown data.pages.home.services
 
 section.homepage-products.products
   .container
