adding new 'what we do' content

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -25,8 +25,12 @@ section.homepage-services
     .row
       .services-content
         h2 = data.pages.home.services.title
-        h4 = data.pages.home.services.description
-        h4 = data.pages.home.services.info
+        h3 = data.pages.home.services.service1
+        p = data.pages.home.services.description1
+        h3 = data.pages.home.services.service2
+        p = data.pages.home.services.description2
+        h3 = data.pages.home.services.service3
+        p = data.pages.home.services.description3
 
 section.homepage-products.products
   .container
