--- a/source/stylesheets/demo/homepage/_services.scss
+++ b/source/stylesheets/demo/homepage/_services.scss
@@ -12,11 +12,21 @@
       margin: 0 0 15px;
       font-size: 32px;
       font-weight: 700;
+      padding-top: 60px;
+      padding-bottom: 60px;
+    }
+
+    h3 {
+      margin: 0 0 15px;
+      font-size: 28px;
+      font-weight: 700;
+      padding-top: 20px;
+      padding-bottom: 20px;
     }
 
     p {
       margin: 0;
-      font-size: 24px;
+      font-size: 20px;
       line-height: 36px;
       
     }
