try changing test to body

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -18,7 +18,7 @@ section.homepage-test
   .container
      .row
        .test-content
-        = markdown data.pages.home.test
+        = markdown data.pages.home.body
 
 section.homepage-services
   .container
@@ -26,11 +26,11 @@ section.homepage-services
       .services-content
         h2 = data.pages.home.services.title
         h3 = data.pages.home.services.service1
-        p = data.pages.home.services.body
+        p = data.pages.home.services.description1
         h3 = data.pages.home.services.service2
-        p = data.pages.home.services.body
+        p = data.pages.home.services.description2
         h3 = data.pages.home.services.service3
-        p = data.pages.home.services.body
+        p = data.pages.home.services.description3
 
 section.homepage-products.products
   .container
