adding individ services objects

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -25,12 +25,12 @@ section.homepage-services
     .row
       .services-content
         h2 = data.pages.home.services.title
-        h3 = data.pages.home.services.service1
-        p = data.pages.home.services.description1
-        h3 = data.pages.home.services.service2
-        p = data.pages.home.services.description2
-        h3 = data.pages.home.services.service3
-        p = data.pages.home.services.description3
+        h3 = data.pages.home.service1.title
+        p = data.pages.home.service1.body
+        h3 = data.pages.home.service2.title
+        p = data.pages.home.service2.body
+        h3 = data.pages.home.service3.title
+        p = data.pages.home.service3.body
 
 section.homepage-products.products
   .container
